<resources>
    <string name="app_name">FinFix</string>
    <string name="pengeluaran">Expensees</string>
    <string name="jumlah">-80.000</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tanggal">Date</string>
    <string name="lanjut">Finish</string>
    <string name="lacak">Track Your Finances</string>
    <string name="empty_list_message">No invoice added yet</string>
    <string name="scan_invoice">Scan</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="camera_permission_required">Camera permission required</string>
    <string name="success_scan">Successfully scanned</string>
    <string name="failed_scan">Scan Failed</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="donthavracc">Don\'t have an a account?</string>
    <string name="signUp">Sign Up</string>
    <string name="havacc">Already have an account?</string>
    <string name="getstarted">Get Started</string>
    <string name="register">Sign Up</string>
    <string name="register_failed">Registration failed</string>
    <string name="login_failed">Login failed</string>
    <string name="tryagain">Try Again</string>
    <string name="fill_name">Please fill your name</string>
    <string name="fill_email">Please fill your email</string>
    <string name="fill_password">Please fill your password</string>
    <string name="pass_min">Password must be at least 8 or more</string>
    <string name="error_valid_email">Entera a valid email address</string>
    <string name="invalid_login">The email or password you entered is incorrect. Please check and try again.</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="success_regis">You have been registered successfully.</string>
    <string name="next">Next</string>
    <string name="success_login">You have successfully logged in</string>
    <string name="logout">Log Out</string>
    <string name="finfix">FinFix</string>
    <string name="add_invoice">Add Invoice</string>
    <string name="blank">" "</string>
    <string name="name">Name</string>
    <string name="selectimage">Select an image first</string>
    <string name="data_stored_successfully">Data stored successfully</string>
    <string name="image_stored_successfully">Image stored successfully</string>
    <string name="success_stored">Data has been saved successfully</string>
    <string name="delete">Delete</string>
</resources>