<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_12"
        android:layout_width="340dp"
        android:layout_height="605dp"
        android:background="@drawable/input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.170"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/jumlah"
            android:layout_width="118dp"
            android:layout_height="32dp"
            android:fontFamily="@font/baloothambi2semibold"
            android:text="@string/jumlah"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pengeluaran"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tanggal2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloothambi2regular"
            android:text="@string/tanggal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.174"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jumlah"
            app:layout_constraintVertical_bias="0.614" />

        <TextView
            android:id="@+id/pengeluaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloothambi2regular"
            android:gravity="top"
            android:text="@string/pengeluaran"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.168"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgScan"
            app:layout_constraintVertical_bias="0.198" />

        <ImageView
            android:id="@+id/imgScan"
            android:layout_width="240dp"
            android:layout_height="320dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.170"
            android:background="#D9D9D9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/baloothambi2regular"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_12"
        app:layout_constraintVertical_bias="0.144" />

</androidx.constraintlayout.widget.ConstraintLayout>